fix: remove html overflow auto and change height to min-height

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -207,12 +207,11 @@
 }
 
 html,body {
-  height: 100%;
+  min-height: 100%;
 }
 
 html {
   background-color: var(--ye-color-background);
-  overflow: auto;
 }
 
 body {
